# LensDistortionFromLines

./: CMakeLists.txt  README.md
output/building/: building.calib  output.txt  results.json
output/chicago/: chicago.calib  output.txt  results.json
output/rubiks/: output.txt  results.json  rubiks.calib
python/: lens_distortion_module.py  lens_distortion_pybind.cpp  lens_distortion_wrapper.py  match_opencv_fisheye.py  pybind_test.py
python/pybind/: lens_distortion_pybind.cpp  pybind_test.py
src/: lens_distortion_correction_2p_iterative_optimization.cpp  lens_distortion_program.h
src/ami_lens_distortion/: lens_distortion_procedures.h
